# rust_vulkan_teapot

./: .gitignore  Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/ui/: mod.rs
common/src/utils/: mod.rs
common/src/vulkan/: constants.rs  create_buffer.rs  mod.rs
game/: Cargo.toml  log.txt
game/src/: main.rs
game/src/vulkan/: mod.rs
teapot/: Cargo.toml  build.rs
teapot/shaders/: shader.tesc  shader.tese  shader.vert
teapot/src/: main.rs  teapot_data.rs
teapot/src/vulkan/: create_buffer.rs  create_buffer_init.rs  create_command_pools.rs  create_depth_buffer.rs  create_descriptor_pools.rs  create_descriptor_set_layout.rs  create_fences.rs  create_framebuffers.rs  create_pipeline_layout.rs  create_pipelines.rs  create_render_pass.rs  create_semaphore.rs  create_shader_module.rs  draw.rs  get_required_instance_extensions.rs  mod.rs  set_debug_utils_object_name.rs  vulkan_clean.rs  vulkan_data.rs
teapot/src/vulkan/vulkan_draw/: allocate_descriptor_set.rs  begin_command_buffer.rs  begin_render_pass.rs  draw.rs  get_command_buffer.rs  get_image_index.rs  mod.rs  present.rs  reset_command_pool.rs  reset_descriptor_pool.rs  set_scissor.rs  set_viewport.rs  submit.rs  update_descriptor_set.rs  wait_resource_available.rs
title_screen/: Cargo.toml  build.rs
title_screen/resources/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
title_screen/src/: lib.rs
title_screen/src/ui/: mod.rs  render_ui.rs
title_screen/src/vulkan/: allocate_descriptor_sets.rs  clear_title_screen_data.rs  copy_data_to_font_image.rs  copy_ui_data.rs  create_command_pool.rs  create_descriptor_pool.rs  create_descriptor_set_layout.rs  create_fences.rs  create_font_image.rs  create_font_image_view.rs  create_fragment_shader_module.rs  create_framebuffers.rs  create_index_buffers.rs  create_pipeline.rs  create_pipeline_layout.rs  create_render_pass.rs  create_sampler.rs  create_semaphores.rs  create_vertex_buffers.rs  create_vertex_shader_module.rs  draw.rs  handle_window_resize.rs  mod.rs  title_screen_vulkan_data.rs  update_descriptor_set.rs  wait_resource_available.rs
vulkan_base/: Cargo.toml
vulkan_base/src/: check_instance_version.rs  check_required_instance_extensions.rs  clear_vulkan_base.rs  create_allocator.rs  create_debug_utils_loader.rs  create_depth_buffer.rs  create_entry.rs  create_instance.rs  create_logical_device.rs  create_surface.rs  create_surface_loader.rs  create_swapchain.rs  create_swapchain_image_views.rs  create_swapchain_loader.rs  get_depth_format.rs  get_device_queue.rs  get_physical_device.rs  get_physical_device_properties.rs  get_physical_devices.rs  get_present_mode.rs  get_queue.rs  get_queue_family.rs  get_surface_capabilities.rs  get_surface_extent.rs  get_surface_format.rs  get_swapchain_image_views.rs  get_swapchain_images.rs  lib.rs  on_physical_device_change.rs  rebuild_swapchain_data.rs  vulkan_base_data.rs
vulkan_utils/: Cargo.toml
vulkan_utils/src/: create_buffer.rs  create_semaphore.rs  create_shader_module.rs  lib.rs  mem_buffer.rs  mem_image.rs  set_debug_utils_object_name.rs
