[package]
authors = ["nc <mynameisnikitablack@gmail.com>"]
edition = "2018"
name = "game"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
ash-window = "0.5.0"
common = {path = "../common"}
imgui = "0.6.0"
imgui-winit-support = "0.6.0"
log = "0.4"
simplelog = "0.8.0"
title_screen = {path = "../title_screen"}
vulkan_base = {path = "../vulkan_base"}
winit = "0.24.0"
