[package]
authors = ["nc <mynameisnikitablack@gmail.com>"]
edition = "2018"
name = "teapot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
ash-window = "0.5.0"
log = "0.4"
simplelog = "0.9.0"
winit = "0.24.0"
vulkan_base = {path = "../vulkan_base"}
vk-mem = "0.2.2"
bytemuck = "1.5.0"

[build-dependencies]
shaderc = "0.7.1"