[package]
authors = ["nc <mynameisnikitablack@gmail.com>"]
edition = "2018"
name = "vulkan_base"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
ash-window = "0.5.0"
log = "0.4"
vk-mem = "0.2.2"
winit = "0.24.0"
