[package]
authors = ["nc <mynameisnikitablack@gmail.com>"]
edition = "2021"
name = "vulkan_base"
version = "0.1.0"

[dependencies]
ash = { version = "0.37.0", default-features = false, features = ["linked"] }
ash-window = "0.12.0"
gpu-allocator = "0.20.0"
log = "0.4"
raw-window-handle = "0.5.0"
scopeguard = "1.1.0"
vulkan_utils = { path = "../vulkan_utils" }
winit = "0.27.5"
